2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCsymt.c,
	  src/SDCCval.c:
	  Fixes for bit-precise bit-fields.

2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCglue.c,
	  src/SDCCsymt.c,
	  src/SDCCval.c,
	  support/regression/tests/bitint.c,
	  support/regression/tests/bitintbitfield.c:
	  Fix issues in casts between bitprecise types of different sign.

2022-03-10 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/ds390/main.c,
	  src/hc08/main.c,
	  src/mcs51/main.c,
	  src/pic14/main.c,
	  src/pic16/main.c:
	  Explicitly state _BitInt non-support.

2022-03-10 Gabriele Gorla <gorlik@yahoo.com>

	* src/SDCCglue.c:
	  Make assembly comments more consistent.
	* src/

2022-03-10 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx:
	  Clarify --std-cxx and --std-sdccxx.

2022-03-10 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* Merge _BitInt branch.

2022-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/SDCCpeeph.c:
	  Calculate size of general ASxxx directives, apply [patches:428].

2022-03-10 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCmain.c
	  src/pdk/gen.c
	  src/pdk/main.c
	  src/pdk/peep.c
	  Support for bit-precise integer types on pdk.
	* src/stm8/gen.c,
	  src/stm8/main.c,
	  src/z80/gen.c,
	  support/regression/tests/bitintarith.c:
	  Fix left shift of bit-precise integer types.

2022-03-10 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/z80/gen.c,
	  src/z80/main.c:
	  Support for bit-precise integer types on sm83 up to a width of 16.

2022-03-10 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* Merge _BitInt branch.

2022-03-10 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* doc/sdccman.lyx,
	  src/z80/gen.c,
	  src/z80/main.c,
	  support/regression/tests/bitint.c: